First version pushed to pypi

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 skip_missing_interpreters = true
 envlist =
-    py36,
-    py37,
+    py39,
     type,
     check,
     doctest,
@@ -21,6 +20,7 @@ envdir = {env:TOX_INSTALL_DIR:{toxworkdir}/{envname}}
 # libraries for all testenvs
 deps =
     -rrequirements.txt
+    -rrequirements-torch.txt
     -rrequirements-pyspark.txt
 commands_pre = python -m spacy download en_core_web_sm
 commands = python -m pytest {posargs:-m 'not spark and not complex'}
